--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a class="main-header-logo" href="#"> 
         <img src="img/png/logo.png" width="164" height="36" alt="Логотип DEVICE">
       </a>
-      <div class="main-container container-1">
+      <div class="main-container container-one">
           <form class="search-form" action="https://echo.htmlacademy.ru">
           <label class="visually-hidden" for="search-field">Поиск по сайту</label>
           <div class="main-search"><img src="img/svg/search.svg" width="16" height="16" alt="Поиск">
@@ -41,10 +41,10 @@
         <h1 class="visually-hidden">DEVICE</h1>
         <section class="product-slider">
           <h2 class="visually-hidden">Все о товаре</h2>
-          <div class="container-2">
             <div><img class="picture" src="img/png/slider-1.png" width="384" height="486" alt="Селфи палка"></div>
+              <div class="item-description">
               <p class="product-slogan">Делай селфи,<br> как Бен Стиллер!</p>
-              <p class="products-text">Самая длинная палка для селфи доступна в нашем магазине.
+              <p class="products-text">Самая длинная палка для селфи доступна в нашем магазине.<br>
                 Восемь (Восемь, Карл!) метров длинной и весом всего 5 килограмм.</p>
             <a class="learn-more-button" href="#">Подробнее</a>
             <table class="table">
@@ -55,7 +55,7 @@
               </tr>
               <tr class="line">
                 <td class="table-cell-title">Длина палки</td>
-                <td class="table-cell-title">>Вес палки</td>
+                <td class="table-cell-title">Вес палки</td>
                 <td class="table-cell-title">Материал</td>
               </tr>
             </table>
@@ -68,32 +68,28 @@
         </section>
         <section class="popular-items">
           <h2 class="visually-hidden">Популярные товары</h2>
+          <div class="products-container">
           <ul class="product-categories">
             <li class="categories">
-              <a class="category-link" href="#">
-                <img src="img/png/virtual.png" width="160" height="160" alt="Виртуальные очки">Виртуальная реальность</a>
+              <a class="category-link" href="#">Виртуальная реальность</a>
             </li>
             <li class="categories">
-              <a class="category-link" href="#">
-                <img src="img/png/selfi.png" width="160" height="160" alt="Моноподы для селфи">Моноподы для селфи</a>
+              <a class="category-link" href="#">Моноподы для селфи</a>
             </li>
             <li class="categories">
-              <a class="category-link" href="#">
-                <img src="img/png/camera.png" width="160" height="160" alt="Экшен-камера">Экшен камеры</a>
+              <a class="category-link" href="#">Экшен камеры</a>
             </li>
             <li class="categories">
-              <a class="category-link" href="#">
-                <img src="img/png/bracelet.png" width="160" height="160" alt="Фитнес браслеты">Фитнес браслеты</a>
+              <a class="category-link" href="#">Фитнес браслеты</a>
             </li>
             <li class="categories">
-              <a class="category-link" href="#">
-                <img src="img/png/clock.png" width="160" height="160" alt="Умные часы">Умные часы</a>
+              <a class="category-link" href="#">Умные часы</a>
             </li>
             <li class="categories">
-              <a class="category-link" href="#">
-                <img src="img/png/cvadro.png" width="160" height="160" alt="Квадрокоптеры">Квадрокоптеры</a>
+              <a class="category-link" href="#">Квадрокоптеры</a>
             </li>
           </ul>
+        </div>
         </section>
         <section class="slider">
           <h2 class="visually-hidden">Услуги</h2>
@@ -108,39 +104,35 @@
               <button class="services-button">Кредит</span>
             </li>
             </ul>
-              <h3>Доставка</h3>
-              <p>Мы с удовольствием доставим ваш товар прямо к вашему
+              <h3 class="services-heading">Доставка</h3>
+              <p class="services-description">Мы с удовольствием доставим ваш товар прямо к вашему
                 подъезду совершенно бесплатно! Ведь мы неплохо заработаем,
                 поднимая его на ваш этаж.</p>
-              <img src="img/png/delivery.png" width="136" height="164" alt="Курьер">
+              <img class="icon" src="img/png/delivery.png" width="136" height="164" alt="Курьер">
         </section>
         <section class="site-manufacturers">
           <h2 class="visually-hidden">Бренды</h2>
             <ul class="brands-list">
               <li class="brands">
-                <a class="brands-link" href="#">
-                  <img src="img/png/logo-1.png" width="260" height="100" alt="Dji"></a>
+                <a class="brands-link" href="#"><img class="image" src="img/png/logo-1.png" width="260" height="100" alt="Dji"></a>
               </li>
-              <li class="partners">
-                <a class="brands-link" href="#">
-                  <img src="img/png/logo-5.png" width="260" height="100" alt="SP"></a>
+              <li class="brands">
+                <a class="brands-link" href="#"><img class="image" src="img/png/logo-5.png" width="260" height="100" alt="SP"></a>
               </li>
-              <li class="partners">
-                <a class="brands-link" href="#">
-                  <img src="img/png/logo-3.png" width="260" height="100" alt="GoPro"></a>
+              <li class="brands">
+                <a class="brands-link" href="#"><img class="image" src="img/png/logo-3.png" width="260" height="100" alt="GoPro"></a>
               </li>
-              <li class="partners">
-                <a class="brands-link" href="#">
-                  <img src="img/png/logo-4.png" width="260" height="100" alt="VIVE"></a>
+              <li class="brands">
+                <a class="brands-link" href="#"><img class="image" src="img/png/logo-4.png" width="260" height="100" alt="VIVE"></a>
               </li>
             </ul>
         </section>
         <div class="info">
         <section class="about-us">
-          <h3>О нас</h3>
-          <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас</p>
-          <p>Мы можем доставить ваш товар в самые отдаленные точки России! 
-            DEVICE работает со многими транспортными кампаниями
+          <h3 class="about-company">О нас</h3>
+          <p class="company-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+          <p class="article">Мы можем доставить ваш товар в самые отдаленные точки России! 
+            DEVICE работает со многими транспортными кампаниями:
           </p>
             <ul class="delivery-list">
               <li class="company"><b>Деловые линии</b></li>
@@ -150,19 +142,19 @@
             <a class="more-about-us-button" href="#"><b>Подробнее о нас</b></a>
         </section>
         <section class="contacts">
-          <h3>Контакты</h3>
-          <p>Вы можете забрать товар сами, заехав в наш офис. 
-            Заодно вы сможете проверить работоспособность покупки.
+          <h3 class="contact-company">Контакты</h3>
+          <p class="contact-company-description">Вы можете забрать товар сами, заехав в наш офис. 
+            Заодно, вы сможете проверить работоспособность покупки.
             Всякое бывает.
           </p>
-            <a href="#"><img src="img/png/map.png" width="560" height="222" alt="Карта"></a>
+            <a class="map-link" href="#"><img src="img/png/map.png" width="560" height="222" alt="Карта"></a><br>
             <a class="contact-us-button" href="#">Напишите нам</a>
         </section>
       </div>
       </main>
 
       <footer class="main-footer">
-        <img src="img/png/logo.png" width="163" height="36" alt="Логотип DEVICE">
+        <img class="footer-logo" src="img/png/logo.png" width="163" height="36" alt="Логотип DEVICE">
         <p class="footer-location">г. Москва, ул. Строителей, 15</p>
           <ul class="site-navigation">
             <li class="footer-services"><a class="footer-services-link" href="#">Доставка</a></li>
@@ -174,19 +166,17 @@
             <li class="social-item"><a class="social-link instagram" href="#">Инстаграмм</a></li>
             <li class="social-item"><a class="social-link twitter" href="#">Твиттер</a></li>
           </ul>  
-          <div class="footer-user-navigation">
-            <img src="img/svg/user.svg" width="13" height="12" alt="Иконка пользователя">
-            <a class="footer-login-link" href="#" title="Войти">Войти</a></li>
-          </div>
-          <ul>
-            <li class="footer-compare"><img src="img/svg/compare.svg" width="10" height="10" alt="Иконка сравнить">
+          <ul class="footer-nav">
+            <li class="user-nav"><img src="img/svg/user.svg" width="13" height="12" alt="Иконка пользователя">
+              <a class="footer-login-link" href="#" title="Войти">Войти</a></li>
+            <li class="user-nav"><img src="img/svg/compare.svg" width="10" height="10" alt="Иконка сравнить">
               <a class="footer-compare-link" href="#" title="Сравнить товары">Сравнить</a></li>
-            <li class="footer-cart"><img src="img/svg/cart.svg" width="12" height="12" alt="Корзина">
+            <li class="user-nav"><img src="img/svg/cart.svg" width="12" height="12" alt="Корзина">
               <a class="footer-basket-link" href="#" title="Оплатить покупку">Корзина</a></li>
           </ul>
           <p class="footer-contacts">
-            <a href="tel:+74954959595">Тел.: +7(495) 495-95-95</a> 
-            <a href="#"><img src="img/svg/logo-html.svg" width="27" height="35" alt="Логотип html"></a>
+            <a class="tel-link" href="tel:+74954959595">Тел.: +7(495) 495-95-95</a> 
+            <a class="logo-link" href="#"><img src="img/svg/logo-html.svg" width="27" height="35" alt="Логотип html"></a>
       </footer>
 
       <section class="modal modal-write-us">
@@ -211,7 +201,7 @@
       <section class="modal modal-map">
         <h2 class="visually-hidden">Как до нас добраться</h2>
           <p>
-            <img src="D:\459375-device-master/img/png/map-big.png" width="999" height="598" alt="Адрес офиса">
+            <img src="img/png/map-big.png" width="999" height="598" alt="Адрес офиса">
           </p>
         <button class="modal-close" type="button">Закрыть</button>
       </section>
